--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
             <artifactId>slf4j-api</artifactId>
             <version>[1.7.2,)</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
