--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>javax.jmdns</groupId>
+            <groupId>org.jmdns</groupId>
             <artifactId>jmdns</artifactId>
-            <version>3.4.1</version>
+            <version>[3.5.1,3.5.5]</version>
         </dependency>
 
         <dependency>
