--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>[1.7.2,)</version>
+            <version>[1.7.2,1.8)</version>
         </dependency>
 
         <dependency>
