--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                             http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>su.litvak.chromecast</groupId>
-    <artifactId>api-v2</artifactId>
+    <artifactId>api-v2-parent</artifactId>
+    <packaging>pom</packaging>
     <version>0.11.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
 
-    <name>ChromeCast Java API v2</name>
+    <name>Parent for ChromeCast Java API v2</name>
     <description>Java implementation of ChromeCast V2 protocol client</description>
     <url>https://github.com/vitalidze/chromecast-java-api-v2</url>
 
@@ -29,51 +32,11 @@
         <jackson.version>[2.8.11,2.9.8]</jackson.version>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.jmdns</groupId>
-            <artifactId>jmdns</artifactId>
-            <version>[3.5.1,3.5.5]</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.protobuf</groupId>
-            <artifactId>protobuf-java</artifactId>
-            <version>2.6.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>[1.7.2,1.8)</version>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.8.0-beta2</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>api</module>
+        <module>mdns-api</module>
+        <module>mdns-jmdns-impl</module>
+    </modules>
 
     <profiles>
         <profile>
