--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jackson.version>[2.8.11,2.9.8]</jackson.version>
+        <slf4j.version>[1.7.2,1.7.100]</slf4j.version>
     </properties>
 
     <dependencies>
@@ -57,7 +58,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>[1.7.2,1.8)</version>
+            <version>${slf4j.version}</version>
         </dependency>
 
         <dependency>
@@ -70,7 +71,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.8.0-beta2</version>
+            <version>${slf4j.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
