--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jackson.version>[2.8.11,2.9.8]</jackson.version>
         <slf4j.version>[1.7.2,1.7.100]</slf4j.version>
+        <checkstyle.plugin.version>3.0.0</checkstyle.plugin.version>
+        <checkstyle.version>8.19</checkstyle.version>
     </properties>
 
     <dependencies>
@@ -115,12 +117,12 @@
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-checkstyle-plugin</artifactId>
-              <version>2.17</version>
+              <version>${checkstyle.plugin.version}</version>
               <dependencies>
                 <dependency>
                   <groupId>com.puppycrawl.tools</groupId>
                   <artifactId>checkstyle</artifactId>
-                  <version>[8.18,)</version>
+                  <version>${checkstyle.version}</version>
                 </dependency>
               </dependencies>
             </plugin>
@@ -171,7 +173,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.17</version>
+                <version>${checkstyle.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>validate</id>
@@ -210,7 +212,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>2.17</version>
+          <version>${checkstyle.plugin.version}</version>
             <configuration>
                 <configLocation>checkstyle.xml</configLocation>
                 <encoding>UTF-8</encoding>
