--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jackson.version>[2.8.11,2.9.9]</jackson.version>
+        <jackson.version>[2.8.11,2.10.0)</jackson.version>
         <slf4j.version>[1.7.2,1.7.100]</slf4j.version>
         <checkstyle.plugin.version>3.0.0</checkstyle.plugin.version>
         <checkstyle.version>8.19</checkstyle.version>
